--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,7 @@ find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 add_executable(s1 s1.cpp)
 add_executable(s2 s2.cpp)
+add_executable(s3 s3.cpp)
 target_link_libraries(s1 ${OpenCV_LIBS})
 target_link_libraries(s2 ${OpenCV_LIBS})
+target_link_libraries(s3 ${OpenCV_LIBS})
